--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "dayjs": "^1.8.17",
+    "default-passive-events": "^2.0.0",
     "element-ui": "^2.13.1",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
