--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "d2-admin",
-  "version": "1.14.0",
+  "name": "vue-frame",
+  "version": "1.0.0",
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "start": "npm run serve",
@@ -71,6 +71,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/d2-projects/d2-admin.git"
+    "url": "https://github.com/Axchgit/vue-frame"
   }
 }
