--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios-mock-adapter": "^1.18.1",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
+    "d2-crud-plus": "^1.16.1",
+    "d2-crud-x": "^2.10.1",
+    "d2p-extends": "^1.9.10",
     "dayjs": "^1.8.17",
     "default-passive-events": "^2.0.0",
     "element-ui": "^2.13.1",
@@ -28,6 +31,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lowdb": "^1.0.0",
+    "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "screenfull": "^5.0.2",
     "sortablejs": "^1.10.1",
