--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "lowdb": "^1.0.0",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
+    "qrcodejs2": "0.0.2",
     "screenfull": "^5.0.2",
     "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.1",
+    "vue-monoplasty-slide-verify": "^1.1.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
