--- a/package.json
+++ b/package.json
@@ -12,65 +12,66 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@d2-projects/vue-table-export": "^1.0.1",
-    "@d2-projects/vue-table-import": "^1.0.0",
-    "axios": "^0.19.2",
-    "axios-mock-adapter": "^1.18.1",
+    "@d2-projects/vue-table-export": "^1.1.3",
+    "@d2-projects/vue-table-import": "^1.0.1",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
     "better-scroll": "^1.15.2",
-    "core-js": "^3.4.3",
-    "d2-crud-plus": "^1.16.1",
-    "d2-crud-x": "^2.10.1",
-    "d2p-extends": "^1.9.10",
-    "dayjs": "^1.8.17",
+    "core-js": "^3.10.0",
+    "d2-crud-plus": "^1.16.7",
+    "d2-crud-x": "^2.16.2",
+    "d2p-extends": "^1.9.17",
+    "dayjs": "^1.10.4",
     "default-passive-events": "^2.0.0",
-    "element-ui": "^2.13.1",
+    "element-ui": "^2.15.1",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
-    "hotkeys-js": "^3.7.3",
+    "hotkeys-js": "^3.8.3",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "lowdb": "^1.0.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qrcodejs2": "0.0.2",
-    "screenfull": "^5.0.2",
-    "sortablejs": "^1.10.1",
-    "ua-parser-js": "^0.7.20",
-    "vue": "^2.6.11",
-    "vue-i18n": "^8.15.1",
+    "screenfull": "^5.1.0",
+    "sortablejs": "^1.13.0",
+    "ua-parser-js": "^0.7.27",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.24.2",
+    "vue-image-crop-upload": "^3.0.1",
     "vue-monoplasty-slide-verify": "^1.1.3",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@d2-projects/vue-filename-injector": "^1.1.0",
     "@kazupon/vue-i18n-loader": "^0.5.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-unit-jest": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/cli-plugin-vuex": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.2",
+    "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.0.3",
     "compression-webpack-plugin": "^3.0.1",
-    "cz-conventional-changelog": "^3.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.23.7",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.0",
     "svg-sprite-loader": "^4.1.6",
     "text-loader": "^0.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-theme-color-replacer": "^1.3.3"
+    "vue-template-compiler": "^2.6.12",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-theme-color-replacer": "^1.3.18"
   },
   "config": {
     "commitizen": {
