--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "core-js": "^3.10.0",
     "d2-crud-plus": "^1.16.7",
     "d2-crud-x": "^2.16.2",
-    "d2p-extends": "^1.9.17",
+    "d2p-extends": "^2.13.0",
     "dayjs": "^1.10.4",
     "default-passive-events": "^2.0.0",
     "element-ui": "^2.15.1",
@@ -50,13 +50,13 @@
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/cli-plugin-unit-jest": "^5.0.0-alpha.0",
     "@vue/cli-plugin-vuex": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.0.3",
-    "compression-webpack-plugin": "^3.0.1",
+    "compression-webpack-plugin": "^4.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.1",
