--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,5 @@ VUE_APP_TITLE=学创科技-dev
 
 #请求前缀
 VUE_APP_AJAX_URL = ''
-VUE_APP_API=http://dev.xchtzon.top:8088/
-#VUE_APP_API=http://api.xchtzon.top/
+VUE_APP_API=http://dev.xchtzon.top:8088
+#VUE_APP_API=http://api.xchtzon.top
